--- a/AppMovieCoppel/AppMovieCoppel/Supporting/Localizable.strings
+++ b/AppMovieCoppel/AppMovieCoppel/Supporting/Localizable.strings
@@ -16,3 +16,10 @@
 
 // TapBar
 "tvShow" = "TV Shows";
+
+//Detail Movie
+"companies" = "Compañías de producción";
+
+//Profile
+"profile" = "Profile";
+"favoriteShows" = "Favorite Shows";
