--- a/AppMovieCoppel/AppMovieCoppel/Supporting/Localizable.strings
+++ b/AppMovieCoppel/AppMovieCoppel/Supporting/Localizable.strings
@@ -10,6 +10,8 @@
 "username" = "Username";
 "password" = "Password";
 "credentialsRequired" = "credentials are required";
+"authenticationFailed" = "Authentication failed: You do not have permissions to access the service";
+
 // Error Services
 "withoutInternet" = "No hay conexión a internet";
 "serviceNotAvailable" = "Servicio no disponible";
